fix(Layout): z-index too high

--- a/src/styles/vars.css
+++ b/src/styles/vars.css
@@ -15,5 +15,6 @@
   --pro-layout-main-max-width: 1200px;
   --pro-layout-xs-main-margin: 4px;
   --pro-layout-xs-main-padding: 10px;
+  --pro-layout-index-header: 10;
   --pro-layout-index-sidebar: 1800;
 }
